fix: disable header and drawer menu

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
 			<div class="header-content-area-inner">
 				<ul class="header-list">
 					<li><a href="/">HOME</a></li>
-					<li><a href="/">提出作品一覧</a></li>
-					<li><a href="/">受賞作品一覧</a></li>
+					<!-- <li><a href="/">提出作品一覧</a></li>
+					<li><a href="/">受賞作品一覧</a></li> -->
 				</ul>
 
 				<div class="header-logo">
@@ -56,8 +56,8 @@
 		<div class="drawer-content">
 			<ul class="drawer-content-items">
 				<li class="drawer-content-item"><a href="/">HOME</a></li>
-				<li class="drawer-content-item"><a href="/">提出作品一覧</a></li>
-				<li class="drawer-content-item"><a href="/">受賞作品一覧</a></li>
+				<!-- <li class="drawer-content-item"><a href="/">提出作品一覧</a></li>
+				<li class="drawer-content-item"><a href="/">受賞作品一覧</a></li> -->
 			</ul>
 		</div>
 
