fix: remove unnecessary <>

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 			<div class="info-inner fuwa">
 				<ul class="info-container">
 					<h2 class="info-title">
-						<&nbsp;賞金&nbsp;>
+						賞金
 					</h2>
 					<li class="info-container-item">
 						<p class="info-container-item-left">最優秀賞 (1st)</p>
@@ -106,7 +106,7 @@
 				</ul>
 				<ul class="info-container">
 					<h2 class="info-title">
-						<&nbsp;スケジュール&nbsp;>
+						スケジュール
 					</h2>
 					<li class="info-container-item info-container-item-2">
 						<p class="info-container-item-left info-container-item-left-under">キックオフイベント</p>
