fix: hide unconfirmed info

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
 						<p class="info-container-item-left">その他</p>
 						<p class="info-container-item-right">各スポンサーからスポンサー賞を予定</p>
 					</li>
-					<li class="info-container-item">
+					<!-- <li class="info-container-item">
 						<p class="info-container-item-left">withB賞</p>
 						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">10万円相当</span> XYM</p>
 					</li>
@@ -102,7 +102,7 @@
 					<li class="info-container-item">
 						<p class="info-container-item-left">Hexabase賞</p>
 						<p class="info-container-item-right">ノベルティグッズ</p>
-					</li>
+					</li> -->
 				</ul>
 				<ul class="info-container">
 					<h2 class="info-title">
