fix: hide unconfirmed information

--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,7 @@
 
 		<section class="member">
 			<div class="member-inner fuwa">
-				<h2 class="member-title section-title">審査員</h2>
+				<!-- <h2 class="member-title section-title">審査員</h2>
 				<div class="member-items">
 					<a href="https://twitter.com/NCOSIGIMCITYNRE" class="member-item">
 						<img src="./assets/img/member01.png" alt="gimre NEM/Symbol Core Developer">
@@ -274,7 +274,7 @@
 					<a href="https://twitter.com/noritaka_okabe" class="member-item">
 						<img src="./assets/img/member06.png" alt="岡部典孝　JPYC株式会社　代表取締役">
 					</a>
-				</div>
+				</div> -->
 
 				<div class="member-content">
 					<h2 class="member-title section-title">コミュニティ投票</h2>
