fix: unconfirmed point

--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
 						審査員による審査に加え、提出作品に対するコミュニティの皆様による「投票」を実施します。以下の「投票方法解説動画はこちら」から投票方法を確認の上、「コミュニティ投票はこちら」からハッカソンWebアプリにサインインしてぜひ投票ください。
 					</p>
 					<p class="member-content-text">
-						投票では、提出作品数 17作品 X 5点/作品 = 85点 の持ち点総数を、全作品に対して良いと思う作品ほど多く割り振って点数をつけます。持ち点はすべて使い切って頂く必要があります。同時に、作品に対するメッセージを任意で140字まで入力可能です。作品への感想や制作チームへの応援メッセージ等、ぜひ入力ください。
+						投票では、提出作品数 X ?点/作品の持ち点総数を、全作品に対して良いと思う作品ほど多く割り振って点数をつけます。持ち点はすべて使い切って頂く必要があります。同時に、作品に対するメッセージを任意で140字まで入力可能です。作品への感想や制作チームへの応援メッセージ等、ぜひ入力ください。
 					</p>
 					<p class="member-content-text member-content-text-glay">
 						※提出された投票結果はNEMTUSメンバーにて確認の後ブロックチェーンに刻まれます。<br>
