fix: hide unconfirmed information

--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,7 @@
 			</div>
 		</section>
 
-		<section class="sponser">
+		<!-- <section class="sponser">
 			<div class="sponser-inner fuwa">
 				<h2 class="sponser-title">SPONSER</h2>
 				<p class="sponser-text">NEMTUS Hackathon HACK+ 2024<br class="only-950"> を支援して頂くスポンサー</p>
@@ -318,7 +318,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<section class="about">
 			<div class="about-inner fuwa">
