fix: ogp description

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <meta property="og:url" content="ページのURL"> -->
 	<meta property="og:title" content="NEMTUS Hackathon 2024">
-	<meta property="og:description" content="特定非営利活動法人 NEM技術普及推進会 NEMTUSは、
-    日本においてNEM/Symbol技術の普及や発展を促進するNPO法人です。">
+	<meta property="og:description" content="NEMTUSが開催する2024年度のハッカソンイベント特設サイトです。特定非営利活動法人 NEM技術普及推進会 NEMTUSは、日本においてブロックチェーン(NEM/Symbol)技術の普及や発展を促進するNPO法人です。">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="./assets/img/ogp.png">
-	<meta name="description" content="特定非営利活動法人 NEM技術普及推進会 NEMTUSは、
-    日本においてNEM/Symbol技術の普及や発展を促進するNPO法人です。">
+	<meta name="description" content="NEMTUSが開催する2024年度のハッカソンイベント特設サイトです。特定非営利活動法人 NEM技術普及推進会 NEMTUSは、日本においてブロックチェーン(NEM/Symbol)技術の普及や発展を促進するNPO法人です。">
 	<title>NEMTUS Hackathon 2024</title>
 	<link rel="stylesheet" href="./assets/css/reset.css">
 	<link rel="stylesheet" href="./assets/css/style.css">
