--- a/public/index.html
+++ b/public/index.html
@@ -86,20 +86,20 @@
 						<p class="info-container-item-right">各スポンサーからスポンサー賞を予定</p>
 					</li>
 					<!-- <li class="info-container-item">
-						<p class="info-container-item-left">withB賞</p>
-						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">10万円相当</span> XYM</p>
+						<p class="info-container-item-left">************賞</p>
+						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">**万円相当</span> XYM</p>
 					</li>
 					<li class="info-container-item">
-						<p class="info-container-item-left">StirHosyu賞</p>
-						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">10,000</span> XYM</p>
+						<p class="info-container-item-left">************賞</p>
+						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">**,***</span> XYM</p>
 					</li>
 					<li class="info-container-item">
-						<p class="info-container-item-left">NEWRON賞</p>
-						<p class="info-container-item-right">桑茶ティート【TEA&EAT】</p>
+						<p class="info-container-item-left">************賞</p>
+						<p class="info-container-item-right">************</p>
 					</li>
 					<li class="info-container-item">
-						<p class="info-container-item-left">Hexabase賞</p>
-						<p class="info-container-item-right">ノベルティグッズ</p>
+						<p class="info-container-item-left">************賞</p>
+						<p class="info-container-item-right">************</p>
 					</li> -->
 				</ul>
 				<ul class="info-container">
@@ -300,19 +300,19 @@
 				<p class="sponser-text">NEMTUS Hackathon HACK+ 2024<br class="only-950"> を支援して頂くスポンサー</p>
 				<div class="sponser-items">
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-1.png" alt="HEXABASE">
+						<img src="./assets/img/sponser-img-1.png" alt="************">
 					</div>
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-2.png" alt="NEWRON">
+						<img src="./assets/img/sponser-img-2.png" alt="************">
 					</div>
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-3.png" alt="withB">
+						<img src="./assets/img/sponser-img-3.png" alt="************">
 					</div>
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-4.png" alt="FinTech journal">
+						<img src="./assets/img/sponser-img-4.png" alt="************">
 					</div>
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-5.png" alt="STIR">
+						<img src="./assets/img/sponser-img-5.png" alt="************">
 					</div>
 				</div>
 			</div>
