--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,10 @@
 						その後、募集締め切りまでに応募作品を完成させ、所定の方法で提出することで応募完了となります。<br>
 						詳しくは、募集要項及びエントリー方法をご確認ください。
 					</p><br>
-					<a href="/" class="button button-blue">エントリーする</a>
+					<div class="welcome-buttons">
+						<div class="button button-white show_pop-1">エントリー方法はこちら</div><br class="only-950">
+						<div class="button button-white show_pop-2">応募作品提出方法はこちら</div><br class="only-950">
+					</div>
 				</div>
 			</div>
 		</section>
@@ -332,8 +335,6 @@
 						日本においてNEM/Symbol技術の普及や発展を促進する<br>
 						NPO法人です。
 					</p>
-
-					<a href="/" class="button button-white">エントリーする</a>
 				</div>
 			</div>
 		</section>
