--- a/public/index.html
+++ b/public/index.html
@@ -107,41 +107,46 @@
 						スケジュール
 					</h2>
 					<li class="info-container-item info-container-item-2">
-						<p class="info-container-item-left info-container-item-left-under">キックオフイベント</p>
+						<p class="info-container-item-left">キックオフイベント</p>
 						<p class="info-container-item-right">
 							2023年12月16日(土) 11時～17時<br>
-							<span class="info-container-item-right-span-glay">
+							<a href="https://nemtus.connpass.com/event/302463/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ (メイン会場) docomo R&D OPEN LAB ODAIBA、<br>
-								(サテライト会場) 京都会場検討中 ※1
-							</span>
+							</span></a>
+							<a href="https://nemtus.connpass.com/event/302785/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
+								@ (サテライト会場) Tech Studio Kyoto、<br>
+							</span></a>
+							<a href="https://nemtus.connpass.com/event/302784/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
+								@ (オンライン)
+							</span></a>
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
-						<p class="info-container-item-left">エントリー期間</p>
+						<p class="info-container-item-left">エントリー期間 (※1)</p>
 						<p class="info-container-item-right">
-							2023年12月18日(月)0時0分～2024年3月13日(水)23時59分
+							2023年12月16日(月)0時0分～2024年3月13日(水)23時59分
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
-						<p class="info-container-item-left info-container-item-left-under">ハッカソン開発合宿</p>
+						<p class="info-container-item-left">ハッカソン開発合宿1</p>
 						<p class="info-container-item-right">
 							2024年1月13日(土)～2024年1月14日(日)<br>
 							<span class="info-container-item-right-span-glay">
-								@ 東京エリア ※2
+								@ HashHub
 							</span>
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
-						<p class="info-container-item-left info-container-item-left-under">ハッカソン開発合宿</p>
+						<p class="info-container-item-left">ハッカソン開発合宿2</p>
 						<p class="info-container-item-right">
 							2024年2月17日(土)～2024年2月18日(日)<br>
 							<span class="info-container-item-right-span-glay">
-								@ 地方エリア ※3
+								@ OKUTAMA+ (オクタマプラス)
 							</span>
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
-						<p class="info-container-item-left">成果提出期限</p>
+						<p class="info-container-item-left">成果提出期限 (※2)</p>
 						<p class="info-container-item-right">
 							2024年3月13日(水)23時59分
 						</p>
@@ -153,13 +158,24 @@
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
-						<p class="info-container-item-left info-container-item-left-under">ピッチイベント・授賞式</p>
+						<p class="info-container-item-left">ピッチイベント・授賞式 (※3)</p>
 						<p class="info-container-item-right">
 							2024年3月31日(日) 11時～20時 <br>
 							<span class="info-container-item-right-span-glay">
 								@ (メイン会場) docomo R&D OPEN LAB ODAIBA、<br>
-								(サテライト会場) 京都会場検討中 ※4
 							</span>
+							<span class="info-container-item-right-span-glay">
+								@ (サテライト会場) 京都会場検討中、<br>
+							</span>
+							<span class="info-container-item-right-span-glay">
+								@ (オンライン)
+							</span>
+						</p>
+					</li>
+					<li class="info-container-item info-container-item-2">
+						<p class="info-container-item-left">ハッカソン参加要件</p>
+						<p class="info-container-item-right">
+							(※1),(※2)のオンライン申込および(※3)でオンラインまたは会場でのピッチ参加が必要です。
 						</p>
 					</li>
 				</ul>
