fix: welcome message

--- a/public/index.html
+++ b/public/index.html
@@ -192,9 +192,9 @@
 						</h2>
 						<p class="welcome-message section-message">
 							「NEMTUS Hackathon HACK+ 2024」は、<br>
-							参加者が多様なアイデアや技術を持ち寄り競うことによって、<br class="br-pc">
-							NEM/Symbolのコミュニティや同経済圏がより活性化し<br class="br-pc">
-							技術の普及が加速することを目的としたハッカソンイベントです。
+							参加者が多様なアイデアや技術を持ち寄り競い合うことによって、<br class="br-pc">
+							ブロックチェーン / NEM / Symbolの経済圏・コミュニティがより活性化し<br class="br-pc">
+							技術普及を加速させることを目的としたハッカソンイベントです。
 						</p>
 					</div>
 					<div class="welcome-right">
