--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
 				<div class="welcome-buttons">
 					<div class="button button-white show_pop-1">エントリー方法はこちら</div><br class="only-950">
 					<div class="button button-white show_pop-2">応募作品提出方法はこちら</div><br class="only-950">
-					<a href="/" class="button button-white">過去の Hackathon はこちら</a>
+					<a href="https://hackathon.nemtus.com/" class="button button-white">過去の Hackathon はこちら</a>
 				</div>
 			</div>
 		</section>
@@ -212,10 +212,11 @@
 		<div class="modal_pop modal_pop-1">
 			<div class="modal_pop-bg js-modal-close"></div>
 			<div class="modal_pop_main modal_pop_main-1">
-				<h3 class="modal_pop_main-title">エントリー方法</h3>
+				<h3 class="modal_pop_main-title">エントリー方法 (2023/12/16受付開始)</h3>
 				<p class="modal_pop_main-message">
-					①まずは<span class="modal_pop_main-link"><a href="/">こちら</a></span>のgoogleフォームよりエントリー情報を入力ください。<br>
-					②次に<span class="modal_pop_main-link"><a href="/">こちら</a></span>のリンクよりエントリー情報をブロックチェーンに刻んでいただきエントリー完了となります。
+					①まずはこちらのgoogleフォームよりエントリー情報を入力ください。<br>
+					②次にこちらのリンクよりエントリー情報をブロックチェーンに刻んでください。<br>
+					③最後に<span class="modal_pop_main-link"><a href="https://discord.gg/cxGZ7VUJDS">こちら</a></span>のリンクからNEMTUSのDiscordサーバーに参加し、hackathonチャンネルにて自己紹介をお願いします。<br>
 				</p>
 			</div>
 		</div>
@@ -223,10 +224,11 @@
 		<div class="modal_pop modal_pop-2">
 			<div class="modal_pop-bg js-modal-close"></div>
 			<div class="modal_pop_main modal_pop_main-2">
-				<h3 class="modal_pop_main-title">応募方法</h3>
+				<h3 class="modal_pop_main-title">応募作品提出方法 (2023/12/16受付開始)</h3>
 				<p class="modal_pop_main-message">
-					①まずは<span class="modal_pop_main-link"><a href="/">こちら</a></span>のgoogleフォームより応募作品情報を入力ください。<br>
-					②次に<span class="modal_pop_main-link"><a href="/">こちら</a></span>のリンクより応募作品提出情報をブロックチェーンに刻んでいただき応募完了となります。
+					①まずはこちらのgoogleフォームよりチーム情報と応募作品情報を入力ください。<br>
+					②次にこちらのリンクよりチーム情報をブロックチェーンに刻んでください。<br>
+					②最後にこちらのリンクより応募作品提出情報をブロックチェーンに刻んでいただき応募完了となります。
 				</p>
 			</div>
 		</div>
