--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
 					<p class="entry-message section-message">
 						ハッカソン参加希望者は、事前にエントリーを実施する必要があります。<br>
 						その後、募集締め切りまでに応募作品を完成させ、所定の方法で提出することで応募完了となります。<br>
-						詳しくは、募集要項及びエントリー方法をご確認ください。
+						詳しくは、エントリー方法および応募作品提出方法をご確認ください。
 					</p><br>
 					<div class="welcome-buttons">
 						<div class="button button-white show_pop-1">エントリー方法はこちら</div><br class="only-950">
@@ -298,7 +298,7 @@
 				<div class="member-content">
 					<h2 class="member-title section-title">コミュニティ投票</h2>
 					<p class="member-content-text">
-						審査員による審査に加え、提出作品に対するコミュニティの皆様による「投票」を実施します。以下の「投票方法解説動画はこちら」から投票方法を確認の上、「コミュニティ投票はこちら」からハッカソンWebアプリにサインインしてぜひ投票ください。
+						審査員による審査に加え、提出作品に対するコミュニティの皆様による「投票」を、2024年3月14日(木)～2024年3月28日(木)23時59分の審査・投票受付期間に実施します。審査・投票受付期間になりましたら、以下の「投票方法解説動画はこちら」から投票方法を確認の上、「コミュニティ投票はこちら」からハッカソンWebアプリにサインインしてぜひ投票ください。
 					</p>
 					<p class="member-content-text">
 						投票では、提出作品数 X ?点/作品の持ち点総数を、全作品に対して良いと思う作品ほど多く割り振って点数をつけます。持ち点はすべて使い切って頂く必要があります。同時に、作品に対するメッセージを任意で140字まで入力可能です。作品への感想や制作チームへの応援メッセージ等、ぜひ入力ください。
@@ -309,7 +309,7 @@
 					</p>
 					<div class="member-buttons">
 						<a href="https://www.youtube.com/watch?v=tX1APQDTOIQ" target="_blank" class="button button-white">投票方法解説動画はこちら</a><br class="only-950">
-						<a href="https://nemtus-hackathon.web.app/" target="_blank" class="button button-white">コミュニティ投票はこちら</a>
+						<a target="_blank" class="button button-white">コミュニティ投票は<br>2024/03/14受付開始予定</a>
 					</div>
 				</div>
 			</div>
