--- a/public/index.html
+++ b/public/index.html
@@ -226,9 +226,9 @@
 			<div class="modal_pop_main modal_pop_main-2">
 				<h3 class="modal_pop_main-title">応募作品提出方法 (2023/12/16受付開始)</h3>
 				<p class="modal_pop_main-message">
-					①まずはこちらのgoogleフォームよりチーム情報と応募作品情報を入力ください。<br>
-					②次にこちらのリンクよりチーム情報をブロックチェーンに刻んでください。<br>
-					②最後にこちらのリンクより応募作品提出情報をブロックチェーンに刻んでいただき応募完了となります。
+					①まずはgoogleフォームよりチーム・応募作品情報を入力ください。<br>
+					②次にリンクよりチーム情報をブロックチェーンに刻んでください。<br>
+					②最後にリンクより応募作品提出情報をブロックチェーンに刻んで頂き応募完了となります。
 				</p>
 			</div>
 		</div>
