fix: remove unnecessary txt

--- a/public/index.html
+++ b/public/index.html
@@ -111,10 +111,10 @@
 						<p class="info-container-item-right">
 							2023年12月16日(土) 11時～17時<br>
 							<a href="https://nemtus.connpass.com/event/302463/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
-								@ (メイン会場) docomo R&D OPEN LAB ODAIBA、<br>
+								@ (メイン会場) docomo R&D OPEN LAB ODAIBA<br>
 							</span></a>
 							<a href="https://nemtus.connpass.com/event/302785/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
-								@ (サテライト会場) Tech Studio Kyoto、<br>
+								@ (サテライト会場) Tech Studio Kyoto<br>
 							</span></a>
 							<a href="https://nemtus.connpass.com/event/302784/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ (オンライン)
@@ -162,10 +162,10 @@
 						<p class="info-container-item-right">
 							2024年3月31日(日) 11時～20時 <br>
 							<span class="info-container-item-right-span-glay">
-								@ (メイン会場) docomo R&D OPEN LAB ODAIBA、<br>
+								@ (メイン会場) docomo R&D OPEN LAB ODAIBA<br>
 							</span>
 							<span class="info-container-item-right-span-glay">
-								@ (サテライト会場) 京都会場検討中、<br>
+								@ (サテライト会場) 京都会場検討中<br>
 							</span>
 							<span class="info-container-item-right-span-glay">
 								@ (オンライン)
