--- a/public/index.html
+++ b/public/index.html
@@ -249,7 +249,7 @@
 						ブロックチェーンアプリケーションやシステムの開発を重視します。<br>
 						参加規約内で、クリエイティビティを発揮してください。<br>
 					</p>
-					<a href="/" class="button button-white">参加規約</a>
+					<a href="https://docs.google.com/document/d/1Z6Otkbe-bjOQdejTnXmugfbNomGVUDBg-KP6cFX4XWY/edit?usp=sharing" class="button button-white">参加規約</a>
 				</div>
 			</div>
 		</section>
