--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,7 @@
 				<p class="modal_pop_main-message">
 					①まずはgoogleフォームよりチーム・応募作品情報を入力ください。<br>
 					②次にリンクよりチーム情報をブロックチェーンに刻んでください。<br>
-					②最後にリンクより応募作品提出情報をブロックチェーンに刻んで頂き応募完了となります。
+					③最後にリンクより応募作品提出情報をブロックチェーンに刻んで頂き応募完了となります。
 				</p>
 			</div>
 		</div>
