fix: welcome message

--- a/public/index.html
+++ b/public/index.html
@@ -192,9 +192,11 @@
 						</h2>
 						<p class="welcome-message section-message">
 							「NEMTUS Hackathon HACK+ 2024」は、<br>
-							参加者が多様なアイデアや技術を持ち寄り競い合うことによって、<br class="br-pc">
-							ブロックチェーン / NEM / Symbolの経済圏・コミュニティがより活性化し<br class="br-pc">
-							技術普及を加速させることを目的としたハッカソンイベントです。
+							ブロックチェーン技術の可能性を最大限に引き出し、<br class="br-pc">
+							実社会における課題解決を目指すハッカソンイベントです。<br class="br-pc">
+							参加者は多様なアイディアや技術を持ち寄り、競い合いながら、<br class="br-pc">
+							ブロックチェーンの経済圏・コミュニティを活性化し、<br class="br-pc">
+							技術普及を加速させます。
 						</p>
 					</div>
 					<div class="welcome-right">
