--- a/public/index.html
+++ b/public/index.html
@@ -110,13 +110,13 @@
 						<p class="info-container-item-left">キックオフイベント</p>
 						<p class="info-container-item-right">
 							2023年12月16日(土) 11時～17時<br>
-							<a href="https://nemtus.connpass.com/event/302463/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
+							<a href="https://nemtus.connpass.com/event/302463/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ (メイン会場) docomo R&D OPEN LAB ODAIBA<br>
 							</span></a>
-							<a href="https://nemtus.connpass.com/event/302785/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
+							<a href="https://nemtus.connpass.com/event/302785/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ (サテライト会場) Tech Studio Kyoto<br>
 							</span></a>
-							<a href="https://nemtus.connpass.com/event/302784/"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
+							<a href="https://nemtus.connpass.com/event/302784/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ (オンライン)
 							</span></a>
 						</p>
@@ -218,7 +218,7 @@
 				<p class="modal_pop_main-message">
 					①まずはこちらのgoogleフォームよりエントリー情報を入力ください。<br>
 					②次にこちらのリンクよりエントリー情報をブロックチェーンに刻んでください。<br>
-					③最後に<span class="modal_pop_main-link"><a href="https://discord.gg/cxGZ7VUJDS">こちら</a></span>のリンクからNEMTUSのDiscordサーバーに参加し、hackathonチャンネルにて自己紹介をお願いします。<br>
+					③最後に<span class="modal_pop_main-link"><a href="https://discord.gg/cxGZ7VUJDS" target="_blank" rel="noopener noreferrer">こちら</a></span>のリンクからNEMTUSのDiscordサーバーに参加し、hackathonチャンネルにて自己紹介をお願いします。<br>
 				</p>
 			</div>
 		</div>
@@ -251,7 +251,7 @@
 						ブロックチェーンアプリケーションやシステムの開発を重視します。<br>
 						参加規約内で、クリエイティビティを発揮してください。<br>
 					</p>
-					<a href="https://drive.google.com/file/d/1jbWktQKKgo_Bgw5HD8vlPRRbcPgTMieP/view?usp=sharing" class="button button-white">参加規約</a>
+					<a href="https://drive.google.com/file/d/1jbWktQKKgo_Bgw5HD8vlPRRbcPgTMieP/view?usp=sharing" class="button button-white" target="_blank" rel="noopener noreferrer">参加規約</a>
 				</div>
 			</div>
 		</section>
