fix: add other blockchain description

--- a/public/index.html
+++ b/public/index.html
@@ -249,6 +249,10 @@
 						単なる技術的な実験ではなく、実際の社会問題を解決し、<br>
 						人々の生活にポジティブな影響をもたらす<br>
 						ブロックチェーンアプリケーションやシステムの開発を重視します。<br>
+						NEM / Symbolに限らず、Bitcoin・Ethereum・Cosmos SDK・Astar<br>
+						などのような他のブロックチェーン技術も採用できます。<br>
+						それぞれのブロックチェーン技術の価値を理解し合い、<br>
+						協力することで、より大きなインパクトを生み出しましょう！<br>
 						参加規約内で、クリエイティビティを発揮してください。<br>
 					</p>
 					<a href="https://drive.google.com/file/d/1NVVrSo71Uc9fCfJyqqVlNvGZP3FYFOii/view?usp=sharing" class="button button-white" target="_blank" rel="noopener noreferrer">参加規約</a>
