fix: divide new section

--- a/public/index.html
+++ b/public/index.html
@@ -243,19 +243,42 @@
 						<span>～実社会における課題解決～</span>
 					</h2>
 					<p class="connection-message section-message">
-						ブロックチェーン技術はその革新性やポテンシャルを謳うものの、<br>
+						ブロックチェーン技術はその革新性やポテンシャルを謳うものの、<br class="br-pc">
 						具体的な社会的価値の実現までが見えにくい現状があります。<br>
-						NEMTUS主催の第3回目ハッカソンとなる“Real Impact”では、<br>
-						単なる技術的な実験ではなく、実際の社会問題を解決し、<br>
-						人々の生活にポジティブな影響をもたらす<br>
+						NEMTUS主催の第3回目ハッカソンとなる“Real Impact”では、<br class="br-pc">
+						単なる技術的な実験ではなく、実際の社会問題を解決し、<br class="br-pc">
+						人々の生活にポジティブな影響をもたらす<br class="br-pc">
 						ブロックチェーンアプリケーションやシステムの開発を重視します。<br>
-						NEM / Symbolに限らず、Bitcoin・Ethereum・Cosmos SDK・Astar<br>
-						などのような他のブロックチェーン技術も採用できます。<br>
-						それぞれのブロックチェーン技術の価値を理解し合い、<br>
-						協力することで、より大きなインパクトを生み出しましょう！<br>
 						参加規約内で、クリエイティビティを発揮してください。<br>
 					</p>
 					<a href="https://drive.google.com/file/d/1NVVrSo71Uc9fCfJyqqVlNvGZP3FYFOii/view?usp=sharing" class="button button-white" target="_blank" rel="noopener noreferrer">参加規約</a>
+				</div>
+			</div>
+		</section>
+
+		<section class="welcome">
+			<div class="welcome-inner">
+				<div class="welcome-inner-flex fuwa">
+					<div class="welcome-left">
+						<h2 class="section-title">
+							HACK+2024の新たな展開
+						</h2>
+						<h3 class="section-sub-title">
+							【ブロックチェーンの垣根を超えて】
+						</h3>
+						<p class="welcome-message section-message">
+							私たちはブロックチェーンの枠を超えた、実質的で価値のある成果物を求めています。<br>
+							それぞれのブロックチェーン技術の価値を理解し合い、協力することで、<br class="br-pc">
+							より大きなインパクトを生み出す機会になると考えました。
+						</p>
+						<h3 class="section-sub-title">
+							【多様なブロックチェーンの活用】
+						</h3>
+						<p class="welcome-message section-message">
+							NEM / Symbolに限らず、Bitcoin・Ethereum・Cosmos SDK・Astarなどの<br class="br-pc">
+							どんなブロックチェーン技術も活用できます。
+						</p>
+					</div>
 				</div>
 			</div>
 		</section>
