fix: change bg image of new section

--- a/public/index.html
+++ b/public/index.html
@@ -256,17 +256,17 @@
 			</div>
 		</section>
 
-		<section class="welcome">
-			<div class="welcome-inner">
-				<div class="welcome-inner-flex fuwa">
-					<div class="welcome-left">
+		<section class="new">
+			<div class="new-inner">
+				<div class="new-inner-flex fuwa">
+					<div class="new-left">
 						<h2 class="section-title">
 							HACK+2024の新たな展開
 						</h2>
 						<h3 class="section-sub-title">
 							【ブロックチェーンの垣根を超えて】
 						</h3>
-						<p class="welcome-message section-message">
+						<p class="new-message section-message">
 							私たちはブロックチェーンの枠を超えた、実質的で価値のある成果物を求めています。<br>
 							それぞれのブロックチェーン技術の価値を理解し合い、協力することで、<br class="br-pc">
 							より大きなインパクトを生み出す機会になると考えました。
@@ -274,7 +274,7 @@
 						<h3 class="section-sub-title">
 							【多様なブロックチェーンの活用】
 						</h3>
-						<p class="welcome-message section-message">
+						<p class="new-message section-message">
 							NEM / Symbolに限らず、Bitcoin・Ethereum・Cosmos SDK・Astarなどの<br class="br-pc">
 							どんなブロックチェーン技術も活用できます。
 						</p>
