--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+<head prefix="og: https://ogp.me/ns#">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <meta property="og:url" content="ページのURL"> -->
+	<meta property="og:url" content="https://hackathon-2024.nemtus.com/">
 	<meta property="og:title" content="NEMTUS Hackathon 2024">
+	<meta property="og:image" content="https://hackathon-2024.nemtus.com/assets/img/ogp.png">
 	<meta property="og:description" content="NEMTUSが開催する2024年度のハッカソンイベント特設サイトです。特定非営利活動法人 NEM技術普及推進会 NEMTUSは、日本においてブロックチェーン(NEM/Symbol)技術の普及や発展を促進するNPO法人です。">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="./assets/img/ogp.png">
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:site" content="@NemtusOfficial" />
 	<meta name="description" content="NEMTUSが開催する2024年度のハッカソンイベント特設サイトです。特定非営利活動法人 NEM技術普及推進会 NEMTUSは、日本においてブロックチェーン(NEM/Symbol)技術の普及や発展を促進するNPO法人です。">
 	<title>NEMTUS Hackathon 2024</title>
 	<link rel="stylesheet" href="./assets/css/reset.css">
