--- a/public/index.html
+++ b/public/index.html
@@ -381,8 +381,8 @@
 				</div>
 				<div class="about-right">
 					<p class="about-text">
-						特定非営利活動法人 NEM技術普及推進会 NEMTUSは、<br>
-						日本においてNEM/Symbol技術の普及や発展を促進する<br>
+						特定非営利活動法人 NEM技術普及推進会 NEMTUSは、<br class="br-pc">
+						日本においてNEM/Symbol技術の普及や発展を促進する<br class="br-pc">
 						NPO法人です。
 					</p>
 				</div>
