--- a/public/index.html
+++ b/public/index.html
@@ -267,10 +267,10 @@
 							HACK+2024の新たな展開
 						</h2>
 						<h3 class="section-sub-title">
-							【ブロックチェーンの垣根を超えて】
+							【ブロックチェーンの垣根を越えて】
 						</h3>
 						<p class="new-message section-message">
-							私たちはブロックチェーンの枠を超えた、実質的で価値のある成果物を求めています。<br>
+							私たちはブロックチェーンの枠を越えた、実質的で価値のある成果物を求めています。<br>
 							それぞれのブロックチェーン技術の価値を理解し合い、協力することで、<br class="br-pc">
 							より大きなインパクトを生み出す機会になると考えました。
 						</p>
