--- a/public/index.html
+++ b/public/index.html
@@ -134,18 +134,18 @@
 						<p class="info-container-item-left">ハッカソン開発合宿1</p>
 						<p class="info-container-item-right">
 							2024年1月13日(土)～2024年1月14日(日)<br>
-							<span class="info-container-item-right-span-glay">
+							<a href="https://nemtus.connpass.com/event/303167/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ HashHub
-							</span>
+							</span></a>
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
 						<p class="info-container-item-left">ハッカソン開発合宿2</p>
 						<p class="info-container-item-right">
 							2024年2月17日(土)～2024年2月18日(日)<br>
-							<span class="info-container-item-right-span-glay">
+							<a href="https://nemtus.connpass.com/event/303108/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ OKUTAMA+ (オクタマプラス)
-							</span>
+							</span></a>
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
