fix: add monacoin

--- a/public/index.html
+++ b/public/index.html
@@ -278,7 +278,7 @@
 							【多様なブロックチェーンの活用】
 						</h3>
 						<p class="new-message section-message">
-							NEM / Symbolに限らず、Bitcoin・Ethereum・Cosmos SDK・Astarなどの<br class="br-pc">
+							NEM / Symbolに限らず、Bitcoin・Monacoin・Ethereum・Cosmos SDK・Astarなどの<br class="br-pc">
 							どんなブロックチェーン技術も活用できます。
 						</p>
 					</div>
