--- a/public/index.html
+++ b/public/index.html
@@ -219,8 +219,8 @@
 			<div class="modal_pop_main modal_pop_main-1">
 				<h3 class="modal_pop_main-title">エントリー方法 (2023/12/16受付開始)</h3>
 				<p class="modal_pop_main-message">
-					①まずはこちらのgoogleフォームよりエントリー情報を入力ください。<br>
-					②次にこちらのリンクよりエントリー情報をブロックチェーンに刻んでください。<br>
+					①まずは<span class="modal_pop_main-link"><a href="https://forms.gle/DQjDaeGr7SAbNyoM9" target="_blank" rel="noopener noreferrer">こちら</a></span>のgoogleフォームよりエントリー情報を入力ください。<br>
+					②次に<span class="modal_pop_main-link"><a href="https://nemtus-hackathon.web.app/" target="_blank" rel="noopener noreferrer">こちら</a></span>のリンクよりエントリー情報をブロックチェーンに刻んでください。<br>
 					③最後に<span class="modal_pop_main-link"><a href="https://discord.gg/cxGZ7VUJDS" target="_blank" rel="noopener noreferrer">こちら</a></span>のリンクからNEMTUSのDiscordサーバーに参加し、hackathonチャンネルにて自己紹介をお願いします。<br>
 				</p>
 			</div>
@@ -231,9 +231,9 @@
 			<div class="modal_pop_main modal_pop_main-2">
 				<h3 class="modal_pop_main-title">応募作品提出方法 (2023/12/16受付開始)</h3>
 				<p class="modal_pop_main-message">
-					①まずはgoogleフォームよりチーム・応募作品情報を入力ください。<br>
-					②次にリンクよりチーム情報をブロックチェーンに刻んでください。<br>
-					③最後にリンクより応募作品提出情報をブロックチェーンに刻んで頂き応募完了となります。
+					①まずは<span class="modal_pop_main-link"><a href="https://forms.gle/oAb1a3cBTo5gGZcP7" target="_blank" rel="noopener noreferrer">こちら</a></span>のgoogleフォームよりチーム・応募作品情報を入力ください。<br>
+					②次に<span class="modal_pop_main-link"><a href="https://nemtus-hackathon.web.app/" target="_blank" rel="noopener noreferrer">こちら</a></span>リンクよりチーム情報・応募作品情報をブロックチェーンに刻んでください。<br>
+					③最後に<span class="modal_pop_main-link"><a href="https://discord.gg/cxGZ7VUJDS" target="_blank" rel="noopener noreferrer">こちら</a></span>のリンクから参加できる NEMTUS の Discordサーバーのhackathonチャンネルにて提出完了報告をお願いします。<br>
 				</p>
 			</div>
 		</div>
