--- a/public/index.html
+++ b/public/index.html
@@ -347,29 +347,37 @@
 			</div>
 		</section>
 
-		<!-- <section class="sponser">
+		<section class="sponser">
 			<div class="sponser-inner fuwa">
-				<h2 class="sponser-title">SPONSER</h2>
+				<h2 class="sponser-title">SPONSOR</h2>
 				<p class="sponser-text">NEMTUS Hackathon HACK+ 2024<br class="only-950"> を支援して頂くスポンサー</p>
 				<div class="sponser-items">
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-1.png" alt="************">
+						<a href="https://stir.network/" target="_blank" rel="noopener noreferrer">
+							<img src="./assets/img/sponsor-img-1.png" alt="Stir">
+						</a>
 					</div>
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-2.png" alt="************">
+						<a href="https://cryptoloungegox.com/" target="_blank" rel="noopener noreferrer">
+							<img src="./assets/img/sponsor-img-2.png" alt="Crypto Lounge GOX">
+						</a>
 					</div>
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-3.png" alt="************">
+						<a href="https://sekkahotel.com/" target="_blank" rel="noopener noreferrer">
+							<img src="./assets/img/sponsor-img-3.jpg" alt="雪霞SEKKA SHIRETOKO">
+						</a>
 					</div>
 					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-4.png" alt="************">
+						<a href="https://withb.co.jp/" target="_blank" rel="noopener noreferrer">
+							<img src="./assets/img/sponsor-img-4.png" alt="株式会社withB">
+						</a>
 					</div>
-					<div class="sponser-item">
-						<img src="./assets/img/sponser-img-5.png" alt="************">
-					</div>
+					<!-- <div class="sponser-item">
+						<img src="./assets/img/sponsor-img-5.png" alt="************">
+					</div> -->
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<section class="about">
 			<div class="about-inner fuwa">
