feat: add team building event info

--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,15 @@
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
+						<p class="info-container-item-left">チームビルディング</p>
+						<p class="info-container-item-right">
+							2024年1月7日(日) 19時～21時<br>
+							<a href="https://nemtus.connpass.com/event/306072/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
+								@ オンライン
+							</span></a>
+						</p>
+					</li>
+					<li class="info-container-item info-container-item-2">
 						<p class="info-container-item-left">ハッカソン開発合宿1</p>
 						<p class="info-container-item-right">
 							2024年1月13日(土)～2024年1月14日(日)<br>
