feat: add final event link

--- a/public/index.html
+++ b/public/index.html
@@ -173,15 +173,15 @@
 						<p class="info-container-item-left">ピッチイベント・授賞式 (※3)</p>
 						<p class="info-container-item-right">
 							2024年3月31日(日) 11時～20時 <br>
-							<span class="info-container-item-right-span-glay">
+							<a href="https://nemtus.connpass.com/event/306799/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ (メイン会場) docomo R&D OPEN LAB ODAIBA<br>
-							</span>
-							<span class="info-container-item-right-span-glay">
+							</span></a>
+							<a href="https://nemtus.connpass.com/event/306911/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ (サテライト会場) 京都会場検討中<br>
-							</span>
-							<span class="info-container-item-right-span-glay">
+							</span></a>
+							<a href="https://nemtus.connpass.com/event/306912/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
 								@ (オンライン)
-							</span>
+							</span></a>
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
