feat: add boot camp 3

--- a/public/index.html
+++ b/public/index.html
@@ -158,6 +158,15 @@
 						</p>
 					</li>
 					<li class="info-container-item info-container-item-2">
+						<p class="info-container-item-left">ハッカソン開発合宿3</p>
+						<p class="info-container-item-right">
+							2024年2月24日(土)～2024年2月25日(日)<br>
+							<a href="https://nemtus.connpass.com/event/308109/" target="_blank" rel="noopener noreferrer"><span class="info-container-item-right-span-glay info-container-item-right-span-glay-under">
+								@ ザ・ミレニアルズ京都
+							</span></a>
+						</p>
+					</li>
+					<li class="info-container-item info-container-item-2">
 						<p class="info-container-item-left">成果提出期限 (※2)</p>
 						<p class="info-container-item-right">
 							2024年3月13日(水)23時59分
@@ -384,6 +393,9 @@
 					<!-- <div class="sponser-item">
 						<img src="./assets/img/sponsor-img-5.png" alt="************">
 					</div> -->
+				</div>
+				<div class="member-buttons">
+					<a href="https://forms.gle/gqb9Rvo8MAhiE9yBA" target="_blank" class="button button-white">スポンサー申込はこちら</a>
 				</div>
 			</div>
 		</section>
