fix: name and img

--- a/public/index.html
+++ b/public/index.html
@@ -329,7 +329,7 @@
 						<img src="./assets/img/member04.png" alt="後藤博之［ごっつ］  NPO法人NEMTUS 理事長・Atomos-Seed代表">
 					</a>
 					<a href="https://twitter.com/marimosphere" class="member-item">
-						<img src="./assets/img/member05.png" alt="Mari Asada Visual Artist/Art Director">
+						<img src="./assets/img/member05.png" alt="marimosphere Visual Artist/Art Director">
 					</a>
 				</div>
 
