feat: start judge and vote

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
 			<div class="header-content-area-inner">
 				<ul class="header-list">
 					<li><a href="/">HOME</a></li>
-					<!-- <li><a href="/">提出作品一覧</a></li>
-					<li><a href="/">受賞作品一覧</a></li> -->
+					<li><a href="https://nemtus-hackathon.web.app/">提出作品一覧</a></li>
+					<!-- <li><a href="/">受賞作品一覧</a></li> -->
 				</ul>
 
 				<div class="header-logo">
@@ -57,8 +57,8 @@
 		<div class="drawer-content">
 			<ul class="drawer-content-items">
 				<li class="drawer-content-item"><a href="/">HOME</a></li>
-				<!-- <li class="drawer-content-item"><a href="/">提出作品一覧</a></li>
-				<li class="drawer-content-item"><a href="/">受賞作品一覧</a></li> -->
+				<li class="drawer-content-item"><a href="https://nemtus-hackathon.web.app/">提出作品一覧</a></li>
+				<!--<li class="drawer-content-item"><a href="/">受賞作品一覧</a></li> -->
 			</ul>
 		</div>
 
@@ -339,15 +339,15 @@
 						審査員による審査に加え、提出作品に対するコミュニティの皆様による「投票」を、2024年3月14日(木)～2024年3月28日(木)23時59分の審査・投票受付期間に実施します。審査・投票受付期間になりましたら、以下の「投票方法解説動画はこちら」から投票方法を確認の上、「コミュニティ投票はこちら」からハッカソンWebアプリにサインインしてぜひ投票ください。
 					</p>
 					<p class="member-content-text">
-						投票では、提出作品数 X 5点/作品の持ち点総数を、全作品に対して良いと思う作品ほど多く割り振って点数をつけます。持ち点はすべて使い切って頂く必要があります。同時に、作品に対するメッセージを任意で140字まで入力可能です。作品への感想や制作チームへの応援メッセージ等、ぜひ入力ください。
+						投票では、提出作品数(15作品) X 5点/作品 = 75点の持ち点総数を、全作品に対して良いと思う作品ほど多く割り振って点数をつけます。持ち点はすべて使い切って頂く必要があります。同時に、作品に対するメッセージを任意で140字まで入力可能です。作品への感想や制作チームへの応援メッセージ等、ぜひ入力ください。
 					</p>
 					<p class="member-content-text member-content-text-glay">
 						※提出された投票結果はNEMTUSメンバーにて確認の後ブロックチェーンに刻まれます。<br>
 						※ ブロックチェーンに刻まれたデータは消すことはできないことにご注意ください。
 					</p>
 					<div class="member-buttons">
-						<a href="https://www.youtube.com/watch?v=tX1APQDTOIQ" target="_blank" class="button button-white">投票方法解説動画はこちら</a><br class="only-950">
-						<a target="_blank" class="button button-white">コミュニティ投票は<br>2024/03/14受付開始予定</a>
+						<a href="https://www.youtube.com/watch?v=tX1APQDTOIQ" target="_blank" rel="noopener noreferrer" class="button button-white">投票方法解説動画はこちら</a><br class="only-950">
+						<a href="https://nemtus-hackathon.web.app/" target="_blank" rel="noopener noreferrer" class="button button-white">コミュニティ投票は<br>2024/03/28まで受付中</a>
 					</div>
 				</div>
 			</div>
