fix: button label text to vote

--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,7 @@
 					</p>
 					<div class="member-buttons">
 						<a href="https://www.youtube.com/watch?v=tX1APQDTOIQ" target="_blank" rel="noopener noreferrer" class="button button-white">投票方法解説動画はこちら</a><br class="only-950">
-						<a href="https://nemtus-hackathon.web.app/" target="_blank" rel="noopener noreferrer" class="button button-white">コミュニティ投票は<br>2024/03/28まで受付中</a>
+						<a href="https://nemtus-hackathon.web.app/" target="_blank" rel="noopener noreferrer" class="button button-white">コミュニティ投票はこちら</a>
 					</div>
 				</div>
 			</div>
