--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 			<div class="header-content-area-inner">
 				<ul class="header-list">
 					<li><a href="/">HOME</a></li>
-					<li><a href="https://nemtus-hackathon.web.app/">提出作品一覧</a></li>
+					<li><a href="https://nemtus-hackathon.web.app/years/2024/results">提出作品一覧</a></li>
 					<!-- <li><a href="/">受賞作品一覧</a></li> -->
 				</ul>
 
@@ -57,7 +57,7 @@
 		<div class="drawer-content">
 			<ul class="drawer-content-items">
 				<li class="drawer-content-item"><a href="/">HOME</a></li>
-				<li class="drawer-content-item"><a href="https://nemtus-hackathon.web.app/">提出作品一覧</a></li>
+				<li class="drawer-content-item"><a href="https://nemtus-hackathon.web.app/years/2024/results">提出作品一覧</a></li>
 				<!--<li class="drawer-content-item"><a href="/">受賞作品一覧</a></li> -->
 			</ul>
 		</div>
