feat: add 2024 sponsor awards

--- a/public/index.html
+++ b/public/index.html
@@ -84,26 +84,26 @@
 						<p class="info-container-item-left">特別賞 (3rd)</p>
 						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">25,000</span> XYM</p>
 					</li>
-					<li class="info-container-item">
+					<!-- <li class="info-container-item">
 						<p class="info-container-item-left">その他</p>
 						<p class="info-container-item-right">各スポンサーからスポンサー賞を予定</p>
-					</li>
-					<!-- <li class="info-container-item">
-						<p class="info-container-item-left">************賞</p>
-						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">**万円相当</span> XYM</p>
-					</li>
-					<li class="info-container-item">
-						<p class="info-container-item-left">************賞</p>
-						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">**,***</span> XYM</p>
-					</li>
-					<li class="info-container-item">
-						<p class="info-container-item-left">************賞</p>
-						<p class="info-container-item-right">************</p>
-					</li>
-					<li class="info-container-item">
-						<p class="info-container-item-left">************賞</p>
-						<p class="info-container-item-right">************</p>
 					</li> -->
+					<li class="info-container-item">
+						<p class="info-container-item-left">withB賞</p>
+						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">10万円相当</span> XYM</p>
+					</li>
+					<li class="info-container-item">
+						<p class="info-container-item-left">Crypto Lounge GOX賞</p>
+						<p class="info-container-item-right">CT-Analysis(CryptoTimesの有料レポート)3ヶ月分(4,980円/月x3月分)</p>
+					</li>
+					<li class="info-container-item">
+						<p class="info-container-item-left">Stir賞</p>
+						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">10,000</span> XYM</p>
+					</li>
+					<li class="info-container-item">
+						<p class="info-container-item-left">Resonanz賞</p>
+						<p class="info-container-item-right">知床のおもてなしホテル 雪霞 SEKKA SHIRETOKOで使えるディナー食事券NFTチケット(NFT1枚につき1回限り利用可能 使用期限: 2024/9/30)</p>
+					</li>
 				</ul>
 				<ul class="info-container">
 					<h2 class="info-title">
