--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,10 @@
 						<p class="info-container-item-left">特別賞 (3rd)</p>
 						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">25,000</span> XYM</p>
 					</li>
-					<!-- <li class="info-container-item">
+					<li class="info-container-item">
 						<p class="info-container-item-left">その他</p>
-						<p class="info-container-item-right">各スポンサーからスポンサー賞を予定</p>
-					</li> -->
+						<p class="info-container-item-right">各スポンサーからスポンサー賞</p>
+					</li>
 					<li class="info-container-item">
 						<p class="info-container-item-left">withB賞</p>
 						<p class="info-container-item-right"><span class="info-container-item-right-span-blue">10万円相当</span> XYM</p>
