fix: add awards nav links

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 				<ul class="header-list">
 					<li><a href="/">HOME</a></li>
 					<li><a href="https://nemtus-hackathon.web.app/years/2024/results">提出作品一覧</a></li>
-					<!-- <li><a href="/">受賞作品一覧</a></li> -->
+					<li><a href="https://nemtus-hackathon.web.app/years/2024/awards">受賞作品一覧</a></li>
 				</ul>
 
 				<div class="header-logo">
@@ -58,7 +58,7 @@
 			<ul class="drawer-content-items">
 				<li class="drawer-content-item"><a href="/">HOME</a></li>
 				<li class="drawer-content-item"><a href="https://nemtus-hackathon.web.app/years/2024/results">提出作品一覧</a></li>
-				<!--<li class="drawer-content-item"><a href="/">受賞作品一覧</a></li> -->
+				<li class="drawer-content-item"><a href="https://nemtus-hackathon.web.app/years/2024/awards">受賞作品一覧</a></li>
 			</ul>
 		</div>
 
